public/styles/existing-tweet.css
#tweets-container {
  font-family: 'Source Sans Pro', sans-serif;
}

.tweet {
  border: 2px solid black;
  border-radius: 5px;
  padding: 10px 20px;
  margin: 20px;
}


.fas {
  color: #4056A1;
}
.fas:hover {
  color: #d89820;
}

.tweet:hover {
  border: 1px solid;
  padding: 10px;
  transition: box-shadow .05s;
  box-shadow: 5px 5px 5px rgba(69, 69, 69, 0.5);

}

.tweet-header {
  display:flex;
  justify-content: space-between;
}

.tweet-header-left {
  display:flex;
  align-items: center;
  justify-content: space-between;
  padding: 2px;
}
.tweet-header-right {
  display:flex;
  align-items: center;
}


#content {
  border-bottom: 2px solid black;
}


#tweet-footer {
  display:flex;
  justify-content: space-between;
}

